fix findbugs and pmd warnings